# rust-3d

./: Cargo.toml  README.md  build.rs
res/: advanced_lightning.frag  advanced_lightning.vert  cubemap_bottom.xcf  cubemap_front.xcf  cubemap_left.xcf  cubemap_right.xcf  cubemap_top.xcf  framebuffer.frag  framebuffer.vert  fshader.frag  handpainted.frag  lightShader.frag  lightShader.vert  skybox.frag  skybox.vert  vshader.vert
res/models/: column.mtl  susanne_lowpoly.mtl
res/models/mouse/: mouse60k.mtl
res/models/ves/: Ves.mtl
res/mouse/: mouselowpoly.mtl
res/ves/: Eye_Diff.tga  Eye_Norm.tga  Eyelashes_Diff.tga  Mouth_Diff.tga  Mouth_Norm.tga  Ves.mtl
src/: main.rs
src/engine/: Cargo.toml  camera.rs  entity.rs  framebuffer.rs  lib.rs  lights.rs  model.rs  render_context.rs  scene.rs  shader.rs  skybox.rs  texture.rs  transform.rs
src/math/: Cargo.toml  lib.rs  mat4.rs  quaternion.rs  vec2.rs  vec3.rs  vec4.rs
src/opengl/: Cargo.toml  build.rs
