[package]
name = "rust-3d"
version = "0.1.0"
authors = ["Tomasz Cichocinski <tomaszcichocinski@gmail.com>"]

[[bin]]
name = "rust-3d"

[dependencies.math]
path = "src/math"

[dependencies.engine]
path = "src/engine"

[dependencies.opengl]
path = "src/opengl"

[dependencies]
glutin = "0.13.0"
time = "0.1.39"
image = "0.17.0"
rand = "0.4.2"
